--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -18,4 +18,9 @@
     <string name="fans">粉丝</string>
     <string name="watching">关注</string>
     <string name="like">赞</string>
+    <string name="trend">动态</string>
+    <string name="submit">投稿</string>
+    <string name="favorite">收藏</string>
+    <string name="content">个内容</string>
+    <string name="watched">观看</string>
 </resources>
