--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="coins">coins</string>
     <string name="users">users</string>
     <string name="delete">delete</string>
-    <string name="log_in_now">log in new</string>
+    <string name="log_in_now">log in now</string>
     <string name="add">add</string>
     <string name="import_">import</string>
     <string name="export">export</string>
