--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -43,4 +43,5 @@
     <string name="export">导出</string>
     <string name="bad_file">坏文件</string>
     <string name="failure">失败</string>
+    <string name="exception_warning">严重运行时异常，请重启应用</string>
 </resources>
