--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="export">export</string>
     <string name="bad_file">bad file</string>
     <string name="failure">failure</string>
+    <string name="exception_warning">TODO</string>
 </resources>
