--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,7 @@
     <string name="bad_file">bad file</string>
     <string name="failure">failure</string>
     <string name="exception_warning">TODO</string>
+    <string name="about">about</string>
+    <string name="build_type">build type</string>
+    <string name="project_home">project home</string>
 </resources>
