--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,7 @@
     <string name="night_no">night no</string>
     <string name="night_yes">night yes</string>
     <string name="follow_system">follow_system</string>
+    <string name="not_vip">not vip</string>
+    <string name="send">send</string>
+    <string name="sended">sended</string>
 </resources>
