实现开屏广告

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,6 @@
     <string name="search_bilibili">search bilibili</string>
     <string name="pip">pip</string>
     <string name="ad">ad</string>
+    <string name="skip">skip</string>
+    <string name="keep">keep</string>
 </resources>
