--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -80,4 +80,6 @@
     <string name="search_bilibili">搜索 bilibili</string>
     <string name="pip">画中画</string>
     <string name="ad">广告</string>
+    <string name="skip">跳过</string>
+    <string name="keep">保持</string>
 </resources>
