--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     <string name="ad">ad</string>
     <string name="skip">skip</string>
     <string name="keep">keep</string>
+    <string name="display">display</string>
+    <string name="reload">reload</string>
 </resources>
