--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,5 @@
     <string name="reload">reload</string>
     <string name="downloader">downloader</string>
     <string name="zero_is_default">0 = default</string>
+    <string name="welcome_ads">welcome ADs</string>
 </resources>
