完善弹幕设置

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -87,7 +87,7 @@
     <string name="downloader">下载器</string>
     <string name="zero_is_default">0 = 默认</string>
     <string name="welcome_ads">开屏广告</string>
-    <string name="test">测试 (有问题)</string>
+    <string name="test">测试</string>
     <string name="danmaku_test">弹幕测试</string>
     <string name="danmaku_style">弹幕样式</string>
     <string name="none">无</string>
@@ -97,4 +97,9 @@
     <string name="duplicate_merging">合并重复</string>
     <string name="text_size">字体大小</string>
     <string name="danmaku_margin">弹幕间距</string>
+    <string name="auto">自动</string>
+    <string name="danmaku_drawing">弹幕绘制</string>
+    <string name="click_to_learn_more">点击了解更多</string>
+    <string name="danmaku_drawing_more">阴影模式下p1传入阴影半径\n描边模式下p1传入描边宽度\n投影模式下p1, p2, p3传入offsetX, offsetY, alpha \nffsetX/offsetY: x/y 方向上的偏移量\nalpha: 投影透明度 [0…255]\n 填入浮点数</string>
+    <string name="danmaku_scroll_speed_factor">幕滚动速度系数</string>
 </resources>
