--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -116,4 +116,6 @@
     <string name="retry">重试</string>
     <string name="play_settings">播放设置</string>
     <string name="finish">完成</string>
+    <string name="sync">同步</string>
+    <string name="danmaku_settings">弹幕设置</string>
 </resources>
