--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -131,4 +131,5 @@
     <string name="allow_danmaku_overlapping">允许弹幕重叠</string>
     <string name="d_floor">%d楼</string>
     <string name="share">分享</string>
+    <string name="connection_to_s">连接至: %s</string>
 </resources>
