--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -123,4 +123,5 @@
     <string name="report">举报</string>
     <string name="no_action">无动作</string>
     <string name="canceled">已取消</string>
+    <string name="top2">置顶</string>
 </resources>
