--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,6 @@
     <string name="no_action">no action</string>
     <string name="canceled">canceled</string>
     <string name="top2">top</string>
+    <string name="self_made">self made</string>
+    <string name="added_coin_d">added coin %d</string>
 </resources>
