--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -126,4 +126,5 @@
     <string name="top2">置顶</string>
     <string name="self_made">自制</string>
     <string name="added_coin_d">已投币 %d</string>
+    <string name="favorited_s">收藏至: %s</string>
 </resources>
