--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -127,4 +127,5 @@
     <string name="self_made">自制</string>
     <string name="added_coin_d">已投币 %d</string>
     <string name="favorited_s">收藏至: %s</string>
+    <string name="cant_pass_geetest">bilibili HD 无法通过极验\n请等待几小时到几天，或更换IP地址并重试\n如仍无法登录，请尝试通过抓包获取LoginResponse</string>
 </resources>
