--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,6 @@
     <string name="favorited_s">favorited: %s</string>
     <string name="cant_pass_geetest">bilibili HD can\'t pass Geetest\nPlease wait a few hours to a few days, or change your IP address and try again\nIf you still can\'t log in, please try to get the LoginResponse through packet capture</string>
     <string name="desktop_ua">desktop UA</string>
+    <string name="child_reply">child reply</string>
+    <string name="check_dialog">check dialog</string>
 </resources>
