--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -132,4 +132,5 @@
     <string name="child_reply">子回复</string>
     <string name="check_dialog">检查对话</string>
     <string name="saved_to_s">保存至%s</string>
+    <string name="official_app_download_dir">官方应用下载路径</string>
 </resources>
