--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,5 @@
     <string name="child_reply">child reply</string>
     <string name="check_dialog">check dialog</string>
     <string name="saved_to_s">saved to %s</string>
+    <string name="official_app_download_dir">official app download dir</string>
 </resources>
