--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,8 @@
     <string name="check_dialog">check dialog</string>
     <string name="saved_to_s">saved to %s</string>
     <string name="official_app_download_dir">official app download dir</string>
+    <string name="visibility">visibility</string>
+    <string name="visible">visible</string>
+    <string name="invisible">invisible</string>
+    <string name="no_load">no load</string>
 </resources>
