--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,5 @@
     <string name="visible">visible</string>
     <string name="invisible">invisible</string>
     <string name="no_load">no load</string>
+    <string name="sync_danmaku_progress">sync danmaku progress</string>
 </resources>
