--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -138,4 +138,5 @@
     <string name="invisible">不可见</string>
     <string name="no_load">不加载</string>
     <string name="sync_danmaku_progress">同步弹幕进度</string>
+    <string name="refresh">刷新</string>
 </resources>
