--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,5 @@
     <string name="no_load">no load</string>
     <string name="sync_danmaku_progress">sync danmaku progress</string>
     <string name="refresh">refresh</string>
+    <string name="custom">custom</string>
 </resources>
