--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -140,4 +140,5 @@
     <string name="sync_danmaku_progress">同步弹幕进度</string>
     <string name="refresh">刷新</string>
     <string name="custom">自定义</string>
+    <string name="expired">已失效</string>
 </resources>
