--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,4 +142,5 @@
     <string name="sync_danmaku_progress">sync danmaku progress</string>
     <string name="refresh">refresh</string>
     <string name="custom">custom</string>
+    <string name="expired">expired</string>
 </resources>
