--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -141,4 +141,5 @@
     <string name="refresh">刷新</string>
     <string name="custom">自定义</string>
     <string name="expired">已失效</string>
+    <string name="disable_welcome_screen">禁用欢迎屏</string>
 </resources>
