--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,5 @@
     <string name="custom">custom</string>
     <string name="expired">expired</string>
     <string name="disable_welcome_screen">disable welcome screen</string>
+    <string name="added">added</string>
 </resources>
