--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,4 +145,5 @@
     <string name="expired">expired</string>
     <string name="disable_welcome_screen">disable welcome screen</string>
     <string name="added">added</string>
+    <string name="tools">tools</string>
 </resources>
