--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -143,4 +143,5 @@
     <string name="expired">已失效</string>
     <string name="disable_welcome_screen">禁用欢迎屏</string>
     <string name="added">已添加</string>
+    <string name="tools">工具</string>
 </resources>
