--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,5 @@
     <string name="tools">tools</string>
     <string name="unshareable">unshareable</string>
     <string name="share_to">share to</string>
+    <string name="live_use_web_view">live use web view</string>
 </resources>
