--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -147,4 +147,5 @@
     <string name="unshareable">无法分享</string>
     <string name="share_to">分享至</string>
     <string name="live_use_web_view">直播使用 WebView</string>
+    <string name="auth_to_export">认证以导出</string>
 </resources>
