--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,4 +149,5 @@
     <string name="unshareable">unshareable</string>
     <string name="share_to">share to</string>
     <string name="live_use_web_view">live use web view</string>
+    <string name="auth_to_export">Authentication to export</string>
 </resources>
